Small update, changed radiobuttons to own func, and fixed overflowissue in preview-area

--- a/style.css
+++ b/style.css
@@ -256,3 +256,8 @@ button:hover {
 
     margin-left: 8px;
 }
+
+.block-container {
+    display: block;
+    margin-bottom: 10px;
+}
